# aisle

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TASKS.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  nightly.yml
docs/: Project_AISLE_Experiment_Design.md  determinism.md
docs/decisions/: ADR-1.md  ADR-10.md  ADR-11.md  ADR-12.md  ADR-13.md  ADR-14.md  ADR-15.md  ADR-16.md  ADR-17.md  ADR-18.md  ADR-2.md  ADR-3.md  ADR-4.md  ADR-5.md  ADR-6.md  ADR-7.md  ADR-8.md  ADR-9.md  ADR-M0.md
env/: CONTRACT.md  limits.toml
graphs/: expert_s1.yaml  expert_t0.yaml
registry/manifests/: arm-driver-sim.yaml  base-driver-sim.yaml  budget-guard.yaml  camera-source.yaml  detector-openvocab.yaml  dora-genesis.yaml  grasp-planner-topdown.yaml  gripper-driver-sim.yaml  ik-trajectory.yaml  misplacement-detector.yaml  nav-action.yaml  ocr-label.yaml  oracle-pose.yaml  order-reader.yaml  patrol-planner.yaml  placement-controller.yaml  pose-estimator.yaml  reset.yaml  rollout-client.yaml  s1-expert.yaml  stock-detector.yaml  task-planner.yaml  task-state-machine.yaml  verifier-oracle.yaml  verifier-retail.yaml  waypoint-nav.yaml
registry/schema/: schemas.toml
specs/: 000-constitution.md  010-topic-contract.md  020-scene.md  030-bridge-node.md  040-verifier-reset.md  050-capability-schema.md  060-validator.md  070-harness-clis.md  080-budget-guard.md  090-milestone-M0.md  200-retail-scenarios.md  210-mobility-contract.md
src/aisle/: topics.py
templates/: SPEC_TEMPLATE.md
tests/: conftest.py
tests/accept/: accept_helpers.py  test_contract.py  test_contract_mobile.py  test_m0_gate.py  test_rollout_m0.py  test_s1_expert.py
tests/graph/: test_bridge_minimal.py  test_expert_graph.py  test_guard_in_graph.py  test_guard_mutex.py  test_mobile_bridge.py  test_verifier_wiring.py
tests/sim/: test_behavioral_reset.py  test_expert_graph.py  test_mobile_scene.py  test_scene.py  test_store_scene.py
tests/unit/: cli_helpers.py  conftest.py  test_bootstrap.py  test_cmd_coalescing.py  test_env_hash.py  test_expert_nodes.py  test_guard_clamping.py  test_guard_latency.py  test_idea_gate.py  test_ik_trajectory.py  test_judge.py  test_judge_retail.py  test_manifests.py  test_mobility.py  test_process_rules.py  (+10 more)
tools/: check_pr_title.py  ci.sh  env_hash.json  env_hash.py  trace_check.py  trace_waivers.toml
(+111 files in other folders)
