[project]
name = "aisle"
version = "0.1.0"
description = "AISLE: agentic auto-research for robot manipulation on open infrastructure"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.26.0",
    "numpy>=2.4.6",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
harness = "aisle.harness.cli:main"

# CON-1: linux resolves torch from the CPU index so the sim extra never
# drags CUDA/NVIDIA wheels; a future `cuda` extra is the sanctioned home
# for GPU builds
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[project.optional-dependencies]
sim = [
    "dora-rs>=0.5.0",
    "genesis-world>=1.2.3",
    "pyarrow>=25.0.0",
    "torch>=2.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aisle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "unit: no sim, no dora, <1 s each (CON-12)",
    "sim: imports genesis; headless (CON-12)",
    "graph: launches a dora dataflow (CON-12)",
    "accept: spec-acceptance; cites requirement IDs (CON-12)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
